@@ -152,6 +152,7 @@ importFrom("R.utils", "saveObject")
 importFrom("R.utils", "seqToHumanReadable")
 importFrom("R.utils", "setOption")
 importFrom("R.utils", "Settings")
+importFrom("R.utils", "loadAnywhere")
 importFrom("R.utils", "stext")
 importFrom("R.utils", "toCamelCase")
 importFrom("R.utils", "use")
