@@ -1,0 +1,6 @@
+settings <- aroma.core::aromaSettings
+stopifnot(inherits(settings, "AromaSettings"))
+
+library("aroma.core")
+settings <- aromaSettings
+stopifnot(inherits(settings, "AromaSettings"))
